vcluster_versioned_docs/version-0.30.0/_fragments/sync-to-host-resources.mdx
vCluster syncs specific Kubernetes resources from the virtual cluster to the host cluster. These resources are expected to be created and updated within the virtual cluster.
In addition to standard Kubernetes resources, custom resources can also be synced if configured.

<!-- vale off -->
### Enabled by default
<!-- vale on -->

The following resources are synced by default.

* [Pods](../configure/vcluster-yaml/sync/to-host/core/pods/README.mdx)
* [Secrets](../configure/vcluster-yaml/sync/to-host/core/secrets.mdx)
* [ConfigMaps](../configure/vcluster-yaml/sync/to-host/core/config-maps.mdx)
* [Services](../configure/vcluster-yaml/sync/to-host/networking/services.mdx)
* [Endpoints](../configure/vcluster-yaml/sync/to-host/networking/endpoints.mdx)
* [PersistentVolumeClaims](../configure/vcluster-yaml/sync/to-host/storage/persistent-volume-claims.mdx)

<!-- vale off -->
### Disabled by default
<!-- vale on -->

The following resources are **not** synced by default. You can explicitly enable them in your `vcluster.yaml` configuration.

* [CustomResources](../configure/vcluster-yaml/sync/to-host/advanced/custom-resources.mdx)
* [Ingresses](../configure/vcluster-yaml/sync/to-host/networking/ingresses.mdx)
* [NetworkPolicies](../configure/vcluster-yaml/sync/to-host/networking/network-policies.mdx)
* [PersistentVolumes](../configure/vcluster-yaml/sync/to-host/storage/persistent-volumes.mdx)
* [VolumeSnapshots](../configure/vcluster-yaml/sync/to-host/storage/volume-snapshots.mdx)
* [StorageClasses](../configure/vcluster-yaml/sync/to-host/storage/storage-classes.mdx)
* [ServiceAccounts](../configure/vcluster-yaml/sync/to-host/advanced/service-accounts.mdx)
* [PodDisruptionBudgets](../configure/vcluster-yaml/sync/to-host/advanced/pod-disruption-budgets.mdx)
* [PriorityClasses](../configure/vcluster-yaml/sync/to-host/advanced/priority-classes.mdx)
* [Custom Resources](../configure/vcluster-yaml/sync/to-host/advanced/custom-resources.mdx)
* [Namespaces](../configure/vcluster-yaml/sync/to-host/advanced/namespaces.mdx)

<!-- vale off -->
### Added by the virtual cluster
<!-- vale on -->
When syncing objects from the virtual cluster to the host cluster, the virtual cluster adds management labels to the host-side objects.

In the default (single-namespace) mode, the following labels are added:
- `release`
- `vcluster.loft.sh/namespace`
- `vcluster.loft.sh/managed-by`
- `vcluster.loft.sh/controlled-by`

:::note
If `sync.toHost.namespaces.enabled` is `true` (multi-namespace sync), the virtual cluster does not add the release label. Only the `vcluster.loft.sh/*` labels are applied.
:::

### Bidirectional syncing

For all resources synced from the virtual cluster to the host cluster, `metadata.labels` and `metadata.annotations` are synchronized in both directions.
This means changes made in the virtual cluster are reflected in the host cluster, and changes made in the host cluster are also reflected in the virtual cluster.

:::warning vCluster specific Labels
Any labels prefixed with `vcluster.loft.sh` on the host resources should not be updated by the user. These labels are managed by the vCluster control plane to track resources and prevent conflicts.
:::

#### Additional fields that support bidirectional sync

All `metadata.labels` and `metadata.annotations` are bidirectionally synced for resources synced from the virtual cluster to the host cluster.  
In addition to these fields, vCluster also supports bidirectional syncing for the following resource-specific fields:

| Resource              | Fields     |
|-----------------------|------------|
| Pods                  | <ul><li>`status.conditions`</li></ul> |
| Secrets               | <ul><li>`spec.data`</li><li>`type`</li></ul> |
| ConfigMaps            | <ul><li>`spec.data`</li><li>`spec.binaryData`</li></ul> |
| Services              | <ul><li>`spec.externalIPs`</li><li>`spec.loadBalancerIP`</li><li>`spec.ports`</li><li>`spec.publishNotReadyAddresses`</li><li>`spec.type`</li><li>`spec.externalName`</li><li>`spec.externalTrafficPolicy`</li><li>`spec.sessionAffinity`</li><li>`spec.sessionAffinityConfig`</li><li>`spec.loadBalancerSourceRanges`</li><li>`spec.healthCheckNodePort`</li><li>`spec.selector`</li></ul> |
| Ingresses             | <ul><li>`spec.ingressClassName`</li></ul> |
| PersistentVolumes     | <ul><li>`spec.persistentVolumeSource`</li><li>`spec.capacity`</li><li>`spec.accessModes`</li><li>`spec.persistentVolumeReclaimPolicy`</li><li>`spec.nodeAffinity`</li><li>`spec.volumeMode`</li><li>`spec.mountOptions`</li></ul> |
| StorageClass          | <ul><li>`spec.provisioner`</li><li>`spec.parameters`</li><li>`spec.reclaimPolicy`</li><li>`spec.mountOptions`</li><li>`spec.allowVolumeExpansion`</li><li>`spec.volumeBindingMode`</li><li>`spec.allowedTopologies`</li></ul> |
