vcluster_versioned_docs/version-0.36.0/_fragments/sync-to-host-resources.mdx
vCluster syncs specific Kubernetes resources from the tenant cluster to the control plane cluster. These resources are expected to be created and updated within the tenant cluster.
In addition to standard Kubernetes resources, custom resources can also be synced if configured.

<!-- vale off -->
### Enabled by default
<!-- vale on -->

The following resources are synced by default.

* [Pods](../configure/vcluster-yaml/sync/to-host/core/pods/README.mdx)
* [Secrets](../configure/vcluster-yaml/sync/to-host/core/secrets.mdx)
* [ConfigMaps](../configure/vcluster-yaml/sync/to-host/core/config-maps.mdx)
* [Services](../configure/vcluster-yaml/sync/to-host/networking/services.mdx)
* [Endpoints](../configure/vcluster-yaml/sync/to-host/networking/endpoints.mdx)
* [PersistentVolumeClaims](../configure/vcluster-yaml/sync/to-host/storage/persistent-volume-claims.mdx)

<!-- vale off -->
### Disabled by default
<!-- vale on -->

The following resources are **not** synced by default. You can explicitly enable them in your `vcluster.yaml` configuration.

* [CustomResources](../configure/vcluster-yaml/sync/to-host/advanced/custom-resources.mdx)
* [Ingresses](../configure/vcluster-yaml/sync/to-host/networking/ingresses.mdx)
* [Gateway API](../configure/vcluster-yaml/sync/to-host/networking/gateway-api.mdx)
* [NetworkPolicies](../configure/vcluster-yaml/sync/to-host/networking/network-policies.mdx)
* [PersistentVolumes](../configure/vcluster-yaml/sync/to-host/storage/persistent-volumes.mdx)
* [StorageClasses](../configure/vcluster-yaml/sync/to-host/storage/storage-classes.mdx)
* [ServiceAccounts](../configure/vcluster-yaml/sync/to-host/advanced/service-accounts.mdx)
* [PodDisruptionBudgets](../configure/vcluster-yaml/sync/to-host/advanced/pod-disruption-budgets.mdx)
* [PriorityClasses](../configure/vcluster-yaml/sync/to-host/advanced/priority-classes.mdx)
* [Namespaces](../configure/vcluster-yaml/sync/to-host/advanced/namespaces.mdx)

<!-- vale off -->
### Added by the tenant cluster
<!-- vale on -->
When syncing objects from the tenant cluster to the control plane cluster, the tenant cluster adds management labels to the control plane cluster-side objects.

In the default (single-namespace) mode, the following labels are added:
- `release`
- `vcluster.loft.sh/namespace`
- `vcluster.loft.sh/managed-by`
- `vcluster.loft.sh/controlled-by`

:::note
If `sync.toHost.namespaces.enabled` is `true` (multi-namespace sync), the tenant cluster does not add the release label. Only the `vcluster.loft.sh/*` labels are applied.
:::

### Bidirectional syncing

For all resources synced from the tenant cluster to the control plane cluster, `metadata.labels` and `metadata.annotations` are synchronized in both directions.
This means changes made in the tenant cluster are reflected in the control plane cluster, and changes made in the control plane cluster are also reflected in the tenant cluster.

:::warning vCluster specific Labels
Any labels prefixed with `vcluster.loft.sh` on the control plane cluster resources should not be updated by the user. These labels are managed by the vCluster control plane to track resources and prevent conflicts.
:::

#### Additional fields that support bidirectional sync

All `metadata.labels` and `metadata.annotations` are bidirectionally synced for resources synced from the tenant cluster to the control plane cluster.  
In addition to these fields, vCluster also supports bidirectional syncing for the following resource-specific fields:

| Resource              | Fields     |
|-----------------------|------------|
| Pods                  | <ul><li>`status.conditions`</li></ul> |
| Secrets               | <ul><li>`spec.data`</li><li>`type`</li></ul> |
| ConfigMaps            | <ul><li>`spec.data`</li><li>`spec.binaryData`</li></ul> |
| Services              | <ul><li>`spec.externalIPs`</li><li>`spec.loadBalancerIP`</li><li>`spec.ports`</li><li>`spec.publishNotReadyAddresses`</li><li>`spec.type`</li><li>`spec.externalName`</li><li>`spec.externalTrafficPolicy`</li><li>`spec.sessionAffinity`</li><li>`spec.sessionAffinityConfig`</li><li>`spec.loadBalancerSourceRanges`</li><li>`spec.healthCheckNodePort`</li><li>`spec.selector`</li></ul> |
| Ingresses             | <ul><li>`spec.ingressClassName`</li></ul> |
| Gateway API           | <ul><li>`HTTPRoute`, `Gateway`, `TLSRoute`, `BackendTLSPolicy`, and `ReferenceGrant` metadata and status fields vary by resource and controller support.</li></ul> |
| PersistentVolumes     | <ul><li>`spec.persistentVolumeSource`</li><li>`spec.capacity`</li><li>`spec.accessModes`</li><li>`spec.persistentVolumeReclaimPolicy`</li><li>`spec.nodeAffinity`</li><li>`spec.volumeMode`</li><li>`spec.mountOptions`</li></ul> |
| StorageClass          | <ul><li>`spec.provisioner`</li><li>`spec.parameters`</li><li>`spec.reclaimPolicy`</li><li>`spec.mountOptions`</li><li>`spec.allowVolumeExpansion`</li><li>`spec.volumeBindingMode`</li><li>`spec.allowedTopologies`</li></ul> |
